--- a/rtdetrv2_pytorch/configs/rtdetrv2/my_config.yml
+++ b/rtdetrv2_pytorch/configs/rtdetrv2/my_config.yml
@@ -3,7 +3,7 @@ __include__: [
   '../runtime.yml',
   'include/dataloader.yml',
   'include/optimizer.yml',
-  'include/rtdetr_r50vd.yml',
+  'include/rtdetrv2_r50vd.yml',
 ]
 
 output_dir: ./output/my_rtdetrv2_model
